Change BOT_TOKEN in .env file
Updated the BOT_TOKEN in the environment configuration.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=8518693039:AAGUMTCzqcdTCVK6yfkTIUd_sUVRh1U9AaQ
+BOT_TOKEN=1212121212
 CONTAINER_NAME=passportier_app
 DB_USER=admin
 DB_PASSWORD=postgres
