--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -2,9 +2,9 @@ name: Go Code Review & Build Check
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
   pull_request:
-    branches: [ main, master ]
+    branches: [main, master]
 
 jobs:
   lint-and-test:
@@ -16,18 +16,19 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24' # Sizning loyiha versiyangiz
+          go-version: "1.24"
 
       - name: Install dependencies
-        run: go mod tidy
+        run: go mod download
+
+      - name: Run Tests
+        run: go test -v ./...
 
       - name: Run Linter (GolangCI-Lint)
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
-
-      - name: Run Tests
-        run: go test -v ./...
+          annotate: true
 
   docker-check:
     runs-on: ubuntu-latest
