--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Create dummy .env for Docker build check
+        run: cp .env.example .env
+
       - name: Build Docker Image (Check)
         run: |
-          docker build -t passportier-test .
+          docker-compose build
