Disable `golangci-lint` annotation, update Docker Compose command syntax in CI, and remove `OPENAI_API_KEY` from `.env.example`.

--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -28,7 +28,6 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
-          annotate: true
 
   docker-check:
     runs-on: ubuntu-latest
@@ -44,4 +43,4 @@ jobs:
 
       - name: Build Docker Image (Check)
         run: |
-          docker-compose build
+          docker compose build
