--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -2,12 +2,12 @@ name: Go Code Review & Build Check
 
 on:
   push:
-    branches: [main, master]
+    branches: [ main, master ]
   pull_request:
-    branches: [main, master]
+    branches: [ main, master ]
 
 jobs:
-  lint-and-test:
+  review:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -16,31 +16,40 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.24"
+          go-version: '1.24'
 
       - name: Install dependencies
-        run: go mod download
+        run: go mod tidy
 
-      - name: Run Tests
-        run: go test -v ./...
-
-      - name: Run Linter (GolangCI-Lint)
+      # Lint tekshiruvi (ID berdik)
+      - name: Run Linter
+        id: lint
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
 
-  docker-check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Create dummy .env
+        run: cp .env.example .env || touch .env
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # Docker build tekshiruvi (ID berdik)
+      - name: Build Docker Image
+        id: docker
+        run: docker compose build
 
-      - name: Create dummy .env for Docker build check
-        run: cp .env.example .env
+      # Yagona Telegram xabari
+      - name: Send Telegram Notification
+        if: always()
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            ${{ steps.lint.outcome == 'success' && steps.docker.outcome == 'success' && '✅' || '❌' }} *PassPortierBot Review Result*
 
-      - name: Build Docker Image (Check)
-        run: |
-          docker compose build
+            🔍 *Linting:* ${{ steps.lint.outcome == 'success' && '✅ OK' || '❌ Error' }}
+            🐳 *Docker Build:* ${{ steps.docker.outcome == 'success' && '✅ OK' || '❌ Error' }}
+
+            👤 Muallif: ${{ github.actor }}
+            📝 Commit: ${{ github.event.head_commit.message }}
+            
+            🔗 [Batafsil ko'rish](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
