--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     depends_on:
       - db
       - redis
+    ports:
+      - "8080:8080"
     env_file:
       - .env
     environment:
